# wasmer

./: .appveyor.yml  Cargo.toml  Makefile  azure-pipelines.yml
lib/clif-backend/src/: func_env.rs  lib.rs  module.rs  module_env.rs  resolver.rs  trampoline.rs
lib/clif-backend/src/signal/: mod.rs
lib/emscripten/src/: memory.rs
lib/emscripten/src/io/: mod.rs
lib/llvm-backend/src/: backend.rs  lib.rs  read_info.rs
lib/runtime/: Cargo.toml
lib/runtime-c-api/: Cargo.toml
lib/runtime-c-api/src/: export.rs
lib/runtime-core/src/: backend.rs  backing.rs  config.rs  export.rs  global.rs  import.rs  instance.rs  lib.rs  macros.rs  module.rs  typed_func.rs  vm.rs
lib/runtime-core/src/memory/: mod.rs
lib/runtime-core/src/table/: anyfunc.rs  mod.rs
lib/runtime/examples/: call.rs
lib/runtime/src/: backends.rs  builder.rs  lib.rs
lib/singlepass-backend/src/: lib.rs  parse.rs
lib/wasi/src/: lib.rs  state.rs
lib/wasi/src/syscalls/: mod.rs
src/: lib.rs
src/llvm_backend/: README.md  design.md  examples.wat  main.rs  wasm.txt
src/llvm_backend/parser/: parser.rs
src/tests/: parser.rs
