[package]
name = "wasmer-runtime"
version = "0.3.0"
description = "Wasmer runtime library"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
edition = "2018"
readme = "README.md"

[dependencies]
lazy_static = "1.2.0"
memmap = "0.7.0"

[dependencies.wasmer-runtime-core]
path = "../runtime-core"
version = "0.3.0"

[dependencies.wasmer-singlepass-backend]
path = "../singlepass-backend"
version = "0.3.0"
optional = true

[dependencies.wasmer-clif-backend]
path = "../clif-backend"
version = "0.3.0"
optional = true

[target.'cfg(not(windows))'.dependencies.wasmer-llvm-backend]
path = "../llvm-backend"
optional = true

[dev-dependencies]
tempfile = "3.0.7"
criterion = "0.2"
wabt = "0.7.4"

[features]
default = ["backend:cranelift"]
debug = ["wasmer-clif-backend/debug", "wasmer-runtime-core/debug"]
"backend:llvm" = ["wasmer-llvm-backend"]
"backend:cranelift" = ["wasmer-clif-backend"]
"backend:singlepass" = ["wasmer-singlepass-backend"]

[[bench]]
name = "nginx"
harness = false
